--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlinVersion = "1.4.21"
+    ext.kotlinVersion = "1.5.20"
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.1"
+        classpath "com.android.tools.build:gradle:4.2.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -18,7 +18,7 @@ allprojects {
     repositories {
         mavenLocal()
         mavenCentral()
-        jcenter()
+        mavenCentral()
         google()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
@@ -26,11 +26,15 @@ allprojects {
 }
 
 ext {
-    gdxVersion = '1.9.12'
+    // dependencies
+    gdxVersion = '1.9.13'
     roboVMVersion = '2.3.11'
     box2DLightsVersion = '1.5'
-    ashleyVersion = '1.7.3'
+    ashleyVersion = '1.7.4'
     aiVersion = '1.8.2'
+    junitVersion = '4.13.2'
+    junitExtVersion = '1.1.2'
+    espressoCoreVersion = '3.3.0'
 }
 
 task clean(type: Delete) {
