--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'kotlin-android'
 }
 
 android {
@@ -29,25 +30,20 @@ android {
 }
 
 dependencies {
+    // kotlin
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     // libgdx
-    api "com.badlogicgames.gdx:gdx:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-bullet:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
-    api "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
-    api "com.badlogicgames.ashley:ashley:$ashleyVersion"
-    api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
-    api "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-bullet:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-controllers-android:$gdxVersion"
-    api "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
-    api "com.badlogicgames.ashley:ashley:$ashleyVersion"
-    api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
-    api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+    api "com.badlogicgames.gdx:gdx:1.10.0"
+    api "com.badlogicgames.gdx:gdx-box2d:1.10.0"
+    api "com.badlogicgames.gdx:gdx-bullet:1.10.0"
+    api "com.badlogicgames.gdx:gdx-freetype:1.10.0"
+    api "com.badlogicgames.gdx:gdx-freetype:1.10.0"
+    api "com.badlogicgames.gdx:gdx-tools:1.10.0"
+    api "com.badlogicgames.gdx:gdx-backend-lwjgl:1.10.0"
+    api "com.badlogicgames.gdx:gdx-backend-android:1.10.0"
+    api 'com.badlogicgames.gdx-controllers:gdx-controllers-core:2.2.0'
+    api "com.badlogicgames.gdx-controllers:gdx-controllers-android:2.2.0"
+    api "com.badlogicgames.gdx:gdx-ai:1.8.2"
+    api "com.badlogicgames.ashley:ashley:1.7.4"
+    api "com.badlogicgames.box2dlights:box2dlights:1.5"
 }
