--- a/tetris/build.gradle
+++ b/tetris/build.gradle
@@ -8,8 +8,8 @@ android {
 
     defaultConfig {
         applicationId "cherry.gamebox.tetris"
-        minSdk 21
-        targetSdk 31
+        minSdkVersion 21
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
