update project structure

--- a/config.gradle
+++ b/config.gradle
@@ -14,12 +14,21 @@ app.version_code = version_code
 app.version_name = version_name
 ext.app = app
 
-def game = [:]
-game.fruit_app_id = "cherry.gamebox.fruit"
-game.tetris_app_id = "cherry.gamebox.tetris"
-game.bunny_app_id = "cherry.gamebox.bunny"
-game.gobang_app_id = "cherry.gamebox.gobang"
-game.link_app_id = "cherry.gamebox.link"
-game.snake_app_id = "cherry.gamebox.snake"
-game.link_app_id = "cherry.gamebox.link"
-ext.game = game
+def appid = [:]
+appid.fruit = "cherry.gamebox.fruit"
+appid.tetris = "cherry.gamebox.tetris"
+appid.bunny = "cherry.gamebox.bunny"
+appid.gobang = "cherry.gamebox.gobang"
+appid.link = "cherry.gamebox.link"
+appid.snake = "cherry.gamebox.snake"
+appid.link = "cherry.gamebox.link"
+ext.appid = appid
+
+def libgdx = [:]
+libgdx.gdxVersion = '1.10.0'
+libgdx.roboVMVersion = '2.3.12'
+libgdx.box2DLightsVersion = '1.5'
+libgdx.ashleyVersion = '1.7.4'
+libgdx.aiVersion = '1.8.2'
+libgdx.gdxControllersVersion = '2.2.1'
+ext.libgdx=libgdx
