--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: "config.gradle"
+
 buildscript {
     ext.kotlinVersion = "1.6.0"
     repositories {
@@ -6,7 +8,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath "com.android.tools.build:gradle:7.0.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -22,15 +24,6 @@ allprojects {
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
     }
-}
-
-ext {
-    gdxVersion = '1.10.0'
-    roboVMVersion = '2.3.12'
-    box2DLightsVersion = '1.5'
-    ashleyVersion = '1.7.4'
-    aiVersion = '1.8.2'
-    gdxControllersVersion = '2.2.1'
 }
 
 task clean(type: Delete) {
