--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
+    compileSdk 31
 
     defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 31
+        minSdk 21
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -31,15 +31,16 @@ android {
 dependencies {
     // kotlin
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
-    api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-bullet:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-    api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion"
-    api "com.badlogicgames.gdx-controllers:gdx-controllers-android:$gdxControllersVersion"
-    api "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
-    api "com.badlogicgames.ashley:ashley:$ashleyVersion"
-    api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
-    api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
-    api "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
+    api "com.badlogicgames.gdx:gdx-box2d:$libgdx.gdxVersion"
+    api "com.badlogicgames.gdx:gdx-bullet:$libgdx.gdxVersion"
+    api "com.badlogicgames.gdx:gdx-freetype:$libgdx.gdxVersion"
+    api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$libgdx.gdxControllersVersion"
+    api "com.badlogicgames.gdx-controllers:gdx-controllers-android:$libgdx.gdxControllersVersion"
+    api "com.badlogicgames.box2dlights:box2dlights:$libgdx.box2DLightsVersion"
+    api "com.badlogicgames.ashley:ashley:$libgdx.ashleyVersion"
+    api "com.badlogicgames.gdx:gdx-ai:$libgdx.aiVersion"
+    api "com.badlogicgames.gdx:gdx-backend-lwjgl:$libgdx.gdxVersion"
+    api "com.badlogicgames.gdx:gdx-backend-android:$libgdx.gdxVersion"
+    api "com.badlogicgames.gdx:gdx-tools:$libgdx.gdxVersion"
 }
