--- a/googleads/src/main/AndroidManifest.xml
+++ b/googleads/src/main/AndroidManifest.xml
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="cherry.gamebox.fruit">
+    package="cherry.gamebox.googleads">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:isGame="true"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/GameTheme"
+        android:theme="@style/Theme.Gamebox"
         tools:ignore="AllowBackup">
         <activity
-            android:name=".GameLauncher"
-            android:label="@string/app_name"
-            android:screenOrientation="landscape"
-            android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
