--- a/googleads/src/main/AndroidManifest.xml
+++ b/googleads/src/main/AndroidManifest.xml
@@ -3,14 +3,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="cherry.gamebox.googleads">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gamebox"
         tools:ignore="AllowBackup">
+        <activity
+            android:name=".RewardedVideoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".BannerActivity"
+            android:exported="false" />
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-9939518381636264~1092563270" />
+
+        <activity
+            android:name=".AdaptiveBannerActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
