--- a/puzzles/build.gradle
+++ b/puzzles/build.gradle
@@ -1,8 +1,13 @@
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+}
 
 android {
     compileSdk 31
 
     defaultConfig {
+        applicationId "cherry.gamebox.puzzles"
         minSdk 21
         targetSdk 31
         versionCode 1
@@ -27,10 +32,11 @@ android {
 }
 
 dependencies {
-    // default
-    api project(path: ':core')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.6.0"
-    testImplementation 'junit:junit:4.13.2'
+
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
