--- a/config.gradle
+++ b/config.gradle
@@ -15,14 +15,16 @@ app.version_name = version_name
 ext.app = app
 
 def appid = [:]
-appid.fruit = "cherry.gamebox.fruit"
-appid.tetris = "cherry.gamebox.tetris"
-appid.bunny = "cherry.gamebox.bunny"
-appid.gobang = "cherry.gamebox.gobang"
-appid.link = "cherry.gamebox.link"
-appid.snake = "cherry.gamebox.snake"
-appid.link = "cherry.gamebox.link"
-appid.puzzles = "cherry.gamebox.puzzles"
+def prefix = "cherry.gamebox."
+appid.fruit = prefix.concat("fruit")
+appid.tetris = prefix.concat("tetris")
+appid.bunny = prefix.concat("bunny")
+appid.gobang = prefix.concat("gobang")
+appid.link = prefix.concat("link")
+appid.snake = prefix.concat("snake")
+appid.link = prefix.concat("link")
+appid.puzzles = prefix.concat("puzzles")
+appid.solitaire = prefix.concat("solitaire")
 ext.appid = appid
 
 def libgdx = [:]
