--- a/link/src/main/AndroidManifest.xml
+++ b/link/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
             android:name=".GameLauncher"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout">
+            android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
