--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ android.enableJetifier=true
 kotlin.code.style=official
 # module
 isModule=true
+org.gradle.java.home=/Library/Java/JavaVirtualMachines/openjdk-11.jdk/Contents/Home/
