--- a/bunny/build.gradle
+++ b/bunny/build.gradle
@@ -4,4 +4,8 @@ plugins {
 }
 
 apply from: "../depend.gradle"
+
+android {
+    namespace 'cherry.gamebox.bunny'
+}
 android.defaultConfig.applicationId = appid.bunny
