--- a/bunny/src/main/AndroidManifest.xml
+++ b/bunny/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cherry.gamebox.bunny">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
@@ -11,8 +10,8 @@
         android:theme="@style/GameTheme" >
         <activity
             android:name=".GameLauncher"
-            android:label="@string/app_name"
             android:screenOrientation="landscape"
+            android:exported="true"
             android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
