--- a/link/build.gradle
+++ b/link/build.gradle
@@ -4,4 +4,8 @@ plugins {
 }
 
 apply from: "../depend.gradle"
+
+android {
+    namespace 'cherry.gamebox.link'
+}
 android.defaultConfig.applicationId = appid.link
