--- a/minesweeper/build.gradle
+++ b/minesweeper/build.gradle
@@ -4,4 +4,8 @@ plugins {
 }
 
 apply from: "../depend.gradle"
+
+android {
+    namespace 'cherry.gamebox.minesweeper'
+}
 android.defaultConfig.applicationId = appid.minesweeper
