--- a/snake/build.gradle
+++ b/snake/build.gradle
@@ -4,4 +4,8 @@ plugins {
 }
 
 apply from: "../depend.gradle"
+
+android {
+    namespace 'cherry.gamebox.snake'
+}
 android.defaultConfig.applicationId = appid.snake
