--- a/tetris/build.gradle
+++ b/tetris/build.gradle
@@ -4,4 +4,8 @@ plugins {
 }
 
 apply from: "../depend.gradle"
+
+android {
+    namespace 'cherry.gamebox.tetris'
+}
 android.defaultConfig.applicationId = appid.tetris
