--- a/tetris/src/main/AndroidManifest.xml
+++ b/tetris/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="cherry.gamebox.tetris">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-feature android:glEsVersion="0x00030000" />
     <application
@@ -19,7 +18,6 @@
             android:name=".GameLauncher"
             android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout"
             android:exported="true"
-            android:label="@string/app_name"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
