--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 33
+    compileSdk app.compile_sdk
 
     defaultConfig {
-        minSdk 24
-        targetSdk 33
+        minSdk app.min_sdk
+        targetSdk app.target_sdk
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
