--- a/puzzles/build.gradle
+++ b/puzzles/build.gradle
@@ -6,6 +6,6 @@ plugins {
 apply from: "../depend.gradle"
 
 android {
-    namespace 'cherry.gamebox.puzzles'
+    namespace appid.puzzles
 }
 android.defaultConfig.applicationId = appid.puzzles
