--- a/settings.gradle
+++ b/settings.gradle
@@ -3,10 +3,12 @@ include ':bunny'
 include ':core'
 include ':fruit'
 include ':link'
-include 'gobang'
+include ':gobang'
 include ':tetris'
 include ':snake'
 include ':googleads'
 include ':puzzles'
 include ':solitaire'
 include ':minesweeper'
+include ':tilematch'
+include ':gamepad'
