--- a/core/build.gradle
+++ b/core/build.gradle
@@ -24,7 +24,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
-    namespace 'cherry.gamebox.core'
+    namespace appid.core
 }
 
 dependencies {
