--- a/gobang/build.gradle
+++ b/gobang/build.gradle
@@ -6,6 +6,6 @@ plugins {
 apply from: "../depend.gradle"
 
 android {
-    namespace 'cherry.gamebox.gobang'
+    namespace appid.gobang
 }
 android.defaultConfig.applicationId = appid.gobang
