--- a/depend.gradle
+++ b/depend.gradle
@@ -21,14 +21,13 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = "17"
+        jvmTarget = JavaVersion.VERSION_17
     }
 }
 
 dependencies {
     // default
     api project(path: ':core')
-    implementation libs.kotlin.stdlib
     testImplementation libs.junit4
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
