add tile match game logic

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ kotlin.code.style=official
 # module
 isModule=true
 org.gradle.java.home=/Library/Java/JavaVirtualMachines/openjdk-17.jdk/Contents/Home/
+kotlin.jvm.target.validation.mode = IGNORE
