--- a/depend.gradle
+++ b/depend.gradle
@@ -28,6 +28,7 @@ android {
 dependencies {
     // default
     api project(path: ':core')
+    implementation libs.androidx.annotation
     testImplementation libs.junit4
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
