--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,12 @@ pluginManagement {
         google()
         mavenCentral()
     }
+    plugins {
+        id 'org.jetbrains.kotlin.jvm' version '2.2.0'
+    }
+}
+plugins {
+    id 'org.gradle.toolchains.foojay-resolver-convention' version '0.8.0'
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
@@ -28,3 +34,4 @@ include ':minesweeper'
 include ':tilematch'
 include ':gamepad'
 include ':tzfe'
+include ':superjumper'
